# backend/docs/swagger.yaml
@@ -966,6 +966,42 @@ paths:
       summary: Get leaderboard for a quiz
       tags:
       - quizzes
+  /api/quizzes/{quizId}/leaderboard/stream:
+    get:
+      description: Stream the real-time leaderboard performance of users for a quiz
+        via Server-Sent Events (SSE).
+      parameters:
+      - description: Quiz ID
+        in: path
+        name: quizId
+        required: true
+        type: integer
+      produces:
+      - text/event-stream
+      responses:
+        "200":
+          description: 'data: {LeaderboardResponse}'
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+      summary: Stream leaderboard for a quiz (SSE)
+      tags:
+      - quizzes
   /api/quizzes/{quizId}/publish:
     patch:
       consumes:
